<resources>
    <string name="app_name">TestShopApplication</string>
    <string name="welcome_back_header"><b>Welcome back</b></string>
    <string name="first_name_hint">First name</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_text">Sign in</string>
    <string name="login_text">Login</string>
    <string name="sign_in_header">Sign in</string>
    <string name="email_hint">Email</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="profile"><b>Profile</b></string>
    <string name="change_photo">Change photo</string>
    <string name="satria_adhi_pradana"><b>Satria Adhi Pradana</b></string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade history</string>
    <string name="restore">Restore Purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="trade_by"><b>Trade by bata</b></string>
    <string name="location">Location</string>
    <string name="what_are_you_looking_for"><b>What are you looking for?</b></string>
    <string name="play_station_5_console">Play Station 5 console</string>
    <string name="_90_000">$90,000</string>
    <string name="games">Games</string>
    <string name="latest"><b>Latest</b></string>
    <string name="view_all">View all</string>
    <string name="phone">Phones</string>
    <string name="sale_off">30% off</string>
    <string name="kids">Kids</string>
    <string name="new_balance_sneakers">New balance sneakers</string>
    <string name="flash_sale"><b>Flash Sale</b></string>
    <string name="brands"><b>Brands</b></string>
    <string name="not_tz_part">Не является частью тз :_(</string>
    <string name="favorite">Фрагмент - favorite</string>
    <string name="basket">Фрагмент - basket</string>
    <string name="chat">Фрагмент - chat</string>
</resources>