<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/sign_in_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_header"
        android:fontFamily="@font/montesserat_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="130dp"
        />

    <EditText
        android:id="@+id/first_name_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name_hint"
        android:textColorHint="@color/auth_edittext_hint_color"
        android:gravity="center"
        android:fontFamily="@font/montesserat_regular"
        android:textSize="@dimen/text_size_auth_edit_text"
        android:background="@drawable/auth_edittext_background"
        app:layout_constraintTop_toBottomOf="@id/sign_in_header"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal_auth"
        android:padding="@dimen/auth_ed_padding"
        />

    <EditText
        android:id="@+id/last_name_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:textColorHint="@color/auth_edittext_hint_color"
        android:gravity="center"
        android:fontFamily="@font/montesserat_regular"
        android:textSize="@dimen/text_size_auth_edit_text"
        android:background="@drawable/auth_edittext_background"
        app:layout_constraintTop_toBottomOf="@id/first_name_ed"
        android:layout_marginTop="@dimen/margin_between_ad_auth"
        android:layout_marginHorizontal="@dimen/margin_horizontal_auth"
        android:padding="@dimen/auth_ed_padding"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/email_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:textColorHint="@color/auth_edittext_hint_color"
        android:gravity="center"
        android:fontFamily="@font/montesserat_regular"
        android:textSize="@dimen/text_size_auth_edit_text"
        android:background="@drawable/auth_edittext_background"
        app:layout_constraintTop_toBottomOf="@id/last_name_ed"
        android:layout_marginTop="@dimen/margin_between_ad_auth"
        android:layout_marginHorizontal="@dimen/margin_horizontal_auth"
        android:padding="@dimen/auth_ed_padding"
        android:inputType="textPassword"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textScaleX="1.2"
        android:background="@drawable/btn_background"
        android:layout_marginTop="@dimen/margin_between_ad_auth"
        android:layout_marginHorizontal="@dimen/margin_horizontal_auth"
        app:layout_constraintTop_toBottomOf="@id/email_ed"
        />

    <TextView
        android:id="@+id/already_have_acc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:fontFamily="@font/montesserat_regular"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintStart_toStartOf="@id/sign_in_btn"
        app:layout_constraintTop_toBottomOf="@id/sign_in_btn"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/login_screen_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/btn_color"
        android:textSize="@dimen/small_text_size"
        android:fontFamily="@font/montesserat_regular"
        app:layout_constraintTop_toTopOf="@id/already_have_acc_text"
        app:layout_constraintBottom_toBottomOf="@id/already_have_acc_text"
        app:layout_constraintStart_toEndOf="@id/already_have_acc_text"
        android:layout_marginStart="10dp"
        />

    <ImageView
        android:id="@+id/google_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/google_icon"
        app:layout_constraintTop_toTopOf="@id/signin_with_google_txt"
        app:layout_constraintBottom_toBottomOf="@id/signin_with_google_txt"
        app:layout_constraintEnd_toStartOf="@id/signin_with_google_txt"
        android:layout_marginEnd="10dp"
        />

    <TextView
        android:id="@+id/signin_with_google_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_google"
        android:fontFamily="@font/montesserat_medium"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/already_have_acc_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        />

    <ImageView
        android:id="@+id/ios_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ios_icon"
        app:layout_constraintTop_toTopOf="@id/signin_with_apple_txt"
        app:layout_constraintBottom_toBottomOf="@id/signin_with_apple_txt"
        app:layout_constraintStart_toStartOf="@id/google_icon"
        android:layout_marginEnd="10dp"
        />

    <TextView
        android:id="@+id/signin_with_apple_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_apple"
        android:fontFamily="@font/montesserat_medium"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/signin_with_google_txt"
        app:layout_constraintStart_toStartOf="@id/signin_with_google_txt"
        android:layout_marginTop="@dimen/margin_between_ad_auth"
        />

</androidx.constraintlayout.widget.ConstraintLayout>