<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/welcome_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back_header"
        android:fontFamily="@font/montesserat_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="130dp"
        />

    <EditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name_hint"
        android:textColorHint="@color/auth_edittext_hint_color"
        android:gravity="center"
        android:fontFamily="@font/montesserat_regular"
        android:textSize="@dimen/text_size_auth_edit_text"
        android:background="@drawable/auth_edittext_background"
        app:layout_constraintTop_toBottomOf="@id/welcome_header"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal_auth"
        android:padding="@dimen/auth_ed_padding"
        />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:textColorHint="@color/auth_edittext_hint_color"
        android:gravity="center"
        android:fontFamily="@font/montesserat_regular"
        android:textSize="@dimen/text_size_auth_edit_text"
        android:background="@drawable/auth_edittext_background"
        app:layout_constraintTop_toBottomOf="@id/first_name_edit_text"
        android:layout_marginTop="@dimen/margin_between_ad_auth"
        android:layout_marginHorizontal="@dimen/margin_horizontal_auth"
        android:padding="@dimen/auth_ed_padding"
        android:inputType="textPassword"
        />

    <ImageView
        android:id="@+id/show_passwrod_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/eye_off_password"
        app:layout_constraintTop_toTopOf="@id/password_edit_text"
        app:layout_constraintBottom_toBottomOf="@id/password_edit_text"
        app:layout_constraintEnd_toEndOf="@id/password_edit_text"
        android:layout_marginEnd="15dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textScaleX="1.2"
        android:background="@drawable/btn_background"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal_auth"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>