<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <ImageView
        android:id="@+id/drawer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/drawer_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin1"
        android:layout_marginStart="@dimen/margin1"
        />

    <TextView
        android:id="@+id/trade_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trade_by"
        android:fontFamily="@font/montesserat_medium"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin1"
        />

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin1"
        android:layout_marginEnd="@dimen/margin2"
        android:src="@drawable/user_avatar"
        />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="@dimen/small_text_size"
        android:fontFamily="@font/montesserat_regular"
        app:layout_constraintTop_toBottomOf="@id/user_avatar"
        app:layout_constraintStart_toStartOf="@id/user_avatar"
        app:layout_constraintEnd_toEndOf="@id/user_avatar"
        android:layout_marginTop="5dp"
        android:drawableEnd="@drawable/arr_down"
        />

    <AutoCompleteTextView
        android:id="@+id/search_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/what_are_you_looking_for"
        android:textSize="@dimen/small_text_size"
        android:gravity="center"
        android:fontFamily="@font/montesserat_medium"
        app:layout_constraintTop_toBottomOf="@id/trade_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/search_ed_background"
        android:layout_marginHorizontal="@dimen/margin2"
        android:padding="10dp"
        android:drawableEnd="@drawable/search"
        android:paddingEnd="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/good_types_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/recycler_good_types"
        app:layout_constraintTop_toBottomOf="@id/search_ed"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        />

    <TextView
        android:id="@+id/Latest_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latest"
        android:textSize="16sp"
        android:fontFamily="@font/montesserat_medium"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/good_types_recycler"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin1"
        />

    <TextView
        android:id="@+id/view_all_latest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all"
        android:fontFamily="@font/montesserat_medium"
        android:textColor="@color/auth_edittext_hint_color"
        android:textSize="10sp"
        app:layout_constraintTop_toTopOf="@id/Latest_header"
        app:layout_constraintBottom_toBottomOf="@id/Latest_header"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin1"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/latest_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Latest_header"
        tools:listitem="@layout/recycler_latest_item"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="7dp"
        />

    <TextView
        android:id="@+id/flash_sale_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flash_sale"
        android:textSize="16sp"
        android:fontFamily="@font/montesserat_medium"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/latest_recycler"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin1"
        />

    <TextView
        android:id="@+id/view_all_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all"
        android:fontFamily="@font/montesserat_medium"
        android:textColor="@color/auth_edittext_hint_color"
        android:textSize="10sp"
        app:layout_constraintTop_toTopOf="@id/flash_sale_header"
        app:layout_constraintBottom_toBottomOf="@id/flash_sale_header"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin1"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/flash_sale_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/flash_sale_header"
        android:layout_marginTop="@dimen/margin"
        tools:listitem="@layout/recycler_flash_sale_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        />

    <TextView
        android:id="@+id/brands_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brands"
        android:textSize="16sp"
        android:fontFamily="@font/montesserat_medium"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/flash_sale_recycler"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin1"
        />

    <TextView
        android:id="@+id/view_all_brands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all"
        android:fontFamily="@font/montesserat_medium"
        android:textColor="@color/auth_edittext_hint_color"
        android:textSize="10sp"
        app:layout_constraintTop_toTopOf="@id/brands_header"
        app:layout_constraintBottom_toBottomOf="@id/brands_header"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin1"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/brands_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/brands_header"
        android:layout_marginTop="@dimen/margin"
        tools:listitem="@layout/recycler_brand_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        />

</androidx.constraintlayout.widget.ConstraintLayout>